# axum_playground

./: Cargo.toml
src/: handlers.rs  main.rs  trace.rs  types.rs
src/types/: db.rs  handler_types.rs  templates.rs
templates/: child.html  form.html
