[package]
name = "axum_playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10.5"
axum = "0.1.2"
http = "0.2.4"
hyper = { version = "0.14.11", features = ["full"] }
serde = { version = "1.0.127", features = ["derive"] }
tokio = { version = "1.9.0", features = ["full"] }
tower = "0.4.8"
tower-http = { version = "0.1.1", features = ["trace"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
